--- a/rateandflix.html
+++ b/rateandflix.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,6 @@
 <body>
     <header>
         <h1>Rate & Flix</h1>
-    
     <nav>
         <a href="http://">Home</a>
         <a href="http://">Notícias</a>
@@ -20,17 +19,16 @@
         <a href="http://">Sobre</a>
         <a href="http://">Contato</a>
     </nav>
-    </header>
     <div class="search-box">
         <input type="text" class="search-txt" placeholder="Digite para pesquisar...">
   
         <a href="#" class="search-btn"><img src="/imagens/loupe.png" alt="Lupa" height="20" width="20"></a>
       </div>
-  
-             <button>Criar Conta</button>
-             <button>Entrar</button>
+             <button class="criarconta">Criar Conta</button>
+             <button class="entrar">Entrar</button>
+    </header>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="blank" class="externo">Gustavo Guanabara</a> do <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/featured" target="blank">curso em vídeo</a></p>
+        <p></p>
     </footer>
 </body>
 </html>
