--- a/rateandflix.html
+++ b/rateandflix.html
@@ -7,6 +7,7 @@
     <title>Rate and Flix - O seu principal site de notícias sobre entretenimento e muito mais</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/swiper-bundle.min.css">
 </head>
 <body>
     <header>
@@ -24,11 +25,33 @@
   
         <a href="#" class="search-btn"><img src="/imagens/loupe.png" alt="Lupa" height="20" width="20"></a>
       </div>
-             <button class="criarconta">Criar Conta</button>
+             <a href="http://127.0.0.1:5501/rateandflix2.html" target="_blank"><button class="criarconta">Criar Conta</button></a>
              <button class="entrar">Entrar</button>
     </header>
+    <div class="carrossel-filmes">
+        <div class="filmes-carrousel">
+            <div class="filmes">
+                <img class="imagem-filmes" src="/imagens/Babylon Poster.jpg" >
+            </div>
+            <div class="filmes">
+                <img class="imagem-filmes" src="/imagens/Bones and All poster.jpg" >
+            </div>
+            <div class="filmes">
+                <img class="imagem-filmes" src="/imagens/Empire of Light poster.jpg" >
+            </div>
+            <div class="filmes">
+                <img class="imagem-filmes" src="/imagens/The Fabelmans Poster.jpg" >
+            </div>
+            <div class="filmes">
+                <img class="imagem-filmes" src="/imagens/Tár poster.jpg" >
+            </div>
+            
+        </div>
+    </div>
     <footer>
         <p></p>
     </footer>
+    <script src="/JS/swiper-bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
