--- a/rateandflix2.html
+++ b/rateandflix2.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rate and Flix - O seu principal site de notícias sobre entretenimento e muito mais </title>
+    <link rel="stylesheet" href="style2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rancho&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-    
+    <h1>Rate & Flix</h1>
 </body>
 </html>
