--- a/rateandflix.html
+++ b/rateandflix.html
@@ -11,10 +11,8 @@
         <link rel="stylesheet" href="estilo/swiper-bundle.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
         <link href="https://fonts.googleapis.com/css2?family=Rancho&family=Roboto:wght@500&display=swap"
             rel="stylesheet">
-        
     </head>
 
     <body>
@@ -77,6 +75,17 @@
       </div>
     </div>
     </section>
+    <hr>
+    <footer>  
+      <nav class="footer">
+          <a href="#">Home</a>
+          <a href="#">Notícias</a>
+          <a href="#">Dicas</a>
+          <a href="#">Filmes</a>
+          <a href="#">Sobre</a>
+          <a href="#">Contato</a>
+      </nav>
+</footer>
 
   <!-- partial -->
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
@@ -86,5 +95,4 @@
         <script src="/JS/swiper-bundle.min.js"></script>
         <script src="script.js"></script>
     </body>
-
     </html>
