--- a/rateandflix.html
+++ b/rateandflix.html
@@ -77,6 +77,17 @@
       </div>
     </div>
     </section>
+         <hr>
+    <footer>  
+      <nav class="footer">
+          <a href="#">Home</a>
+          <a href="#">Notícias</a>
+          <a href="#">Dicas</a>
+          <a href="#">Filmes</a>
+          <a href="#">Sobre</a>
+          <a href="#">Contato</a>
+      </nav>
+</footer>
 
   <!-- partial -->
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
