--- a/rateandflix2.html
+++ b/rateandflix2.html
@@ -7,6 +7,22 @@
     <title>Rate and Flix - O seu principal site de notícias sobre entretenimento e muito mais </title>
 </head>
 <body>
-    
+     <h1>Rate & Flix</h1>
+     <div class="teladelogin">
+   <h2>Olá! Para continuar, digite o seu e-mail ou usuário</h2>
+   <br><br><br><br><br>
+   <h3>E-mail ou Usuário:</h3>
+   <br><br> <br><br><br>
+   <label>
+    <input type="email" name="e-mail" id="text1" size="40">
+   </label>
+   <br><br>
+   <img src="/tccMatheus-Vinicius/imagens/682665_favicon_google_logo_new_icon.png" alt="google.png"><button class="google">Continuar com o Google</button></img>
+   <br><br><br>
+  <img src="/tccMatheus-Vinicius/imagens/social-facebook-button-blue-icon.png" alt="facebook.png"><a href="https://www.facebook.com/" target="_blank"><button class="facebook">Continuar com o Facebook</button></a></img>
+   <br><br>
+    <hr>
+   <h2 class="cadastrado">Ainda não é cadastrado?</h2>
+     </div>
 </body>
 </html>
