--- a/rateandflix2.html
+++ b/rateandflix2.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rate and Flix - O seu principal site de notícias sobre entretenimento e muito mais </title>
-    <link rel="stylesheet" href="style2.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rancho&family=Roboto:wght@500&display=swap"
-        rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rate and Flix - O seu principal site de notícias sobre entretenimento e muito mais </title>
+  <link rel="stylesheet" href="style2.css">
+  <link href="https://fonts.googleapis.com/css2?family=Rancho&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Rate & Flix</h1>
-     <div class="teladelogin">
-   <h2>Olá! Para continuar, digite o seu e-mail ou usuário</h2>
-   <br><br><br><br><br>
-   <h3>E-mail ou Usuário:</h3>
-   <br><br> <br><br><br>
-   <label>
-    <input type="email" name="e-mail" id="text1" size="40">
-   </label>
-   <br><br>
-   <img src="/tccMatheus-Vinicius/imagens/682665_favicon_google_logo_new_icon.png" alt="google.png"><button class="google">Continuar com o Google</button></img>
-   <br><br><br>
-  <img src="/tccMatheus-Vinicius/imagens/social-facebook-button-blue-icon.png" alt="facebook.png"><a href="https://www.facebook.com/" target="_blank"><button class="facebook">Continuar com o Facebook</button></a></img>
-   <br><br>
-    <hr>
-   <h2 class="cadastrado">Ainda não é cadastrado?</h2>
-     </div>
+  <h1>Rate & Flix</h1>
+
+  <div class="container">
+
+    <div class="teladelogin">
+      <h2 class="frase">Olá! Para continuar, digite o seu e-mail ou usuário</h2>
+
+      <h3 class="frase2">E-mail ou Usuário:</h3>
+      <label>
+        <input type="email" name="e-mail" id="text1" size="40">
+      </label>
+       
+      <div class="btnG">
+        <button class="btn"><svg class="ico-btn" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 48 48"
+          <path fill="#FFC107"
+            d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z">
+          </path>
+          <path fill="#FF3D00"
+            d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z">
+          </path>
+          <path fill="#4CAF50"
+            d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z">
+          </path>
+          <path fill="#1976D2"
+            d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z">
+          </path>
+        </svg><h2 class="title-btn"">Continuar
+          com o Google</h2></button>
+      </div>
+      <div class="btnG">
+     <button class="btn"><svg class="ico-btn" style="color: #3b5998;" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+            fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+            <path <
+              d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+          </svg><h2 class="title-btn">Continuar com o
+          Facebook</h2></button></img> 
+      </div>
+      <hr>
+      <h2 class="cadastrado">Ainda não é cadastrado?</h2>
+    </div>
+  </div>
+
 </body>
 </html>
